<resources>
    <string name="fetch_moon_age_failed">月齢を取得できませんでした</string>
    <string name="refresh_button_text">再取得</string>
    <string name="moon_age_image_description">月齢</string>
    <string name="fcm_channel_id" translatable="false">moon_lovers_fcm_channel</string>
    <string name="fcm_channel_name" translatable="false">月齢通知</string>
    <string name="fcm_channel_description" translatable="false">月齢通知に関する設定です</string>
    <string name="menu_about_app">アプリについて</string>
    <string name="menu_notification">通知設定</string>
    <string name="about_app_title">About app</string>
    <string name="author">Author</string>
    <string name="app2641">@app2641</string>
    <string name="contact">Contact</string>
    <string name="app_version">Ver 1.0</string>
</resources>